--- a/src/app/Modules/Home/home-page/home-page.component.html
+++ b/src/app/Modules/Home/home-page/home-page.component.html
@@ -1,49 +1,14 @@
-<!-- <div class="tabs tab-right">
-  <nav>
-    <a href="#content1">Tab1</a>
-    <a href="#content2">Tab2</a>
-    <a href="#content3">Tab3</a>
-  </nav>
-  <div class="content" id="content1">Content1</div>
-  <div class="content" id="content2">Content2</div>
-  <div class="content" id="content3">Content3</div>
-</div>
-
-<div class="tabs tab-left">
-  <nav>
-    <a href="#content4">Tab1</a>
-    <a href="#content5">Tab2</a>
-    <a href="#content6">Tab3</a>
-  </nav>
-  <div class="content" id="content4">Content1</div>
-  <div class="content" id="content5">Content2</div>
-  <div class="content" id="content6">Content3</div>
-</div>
-
-<div class="tabs tab-left-right">
-  <nav>
-    <a href="#content7">Tab1</a>
-    <a href="#content8">Tab2</a>
-    <a href="#content9">Tab3</a>
-  </nav>
-  <div class="content" id="content7">Content1</div>
-  <div class="content" id="content8">Content2</div>
-  <div class="content" id="content9">Content3</div>
-</div>
-
 <div class="tabs tab-round">
   <nav>
-    <a href="#content10">Tab1</a>
-    <a href="#content11">Tab2</a>
-    <a href="#content12">Tab3</a>
+    <a href="#content4">Receivings</a>
+    <a href="#content5">Releasings</a>
   </nav>
-  <div class="content" id="content10">Content1</div>
-  <div class="content" id="content11">Content2</div>
-  <div class="content" id="content12">Content3</div>
-</div> -->
+  <div class="content" id="content4"><app-receiving></app-receiving></div>
+  <div class="content" id="content5"><app-release></app-release></div>
+</div>
 
 
-<h2></h2>
+<!-- <h2></h2>
 <div class="warpper">
   <input class="radio" id="one" name="group" type="radio" checked>
   <input class="radio" id="two" name="group" type="radio">
@@ -61,4 +26,4 @@
       <app-release></app-release>
     </div>
   </div>
-</div>
+</div> -->
