--- a/src/app/Modules/Reports/rep-income/rep-income.component.html
+++ b/src/app/Modules/Reports/rep-income/rep-income.component.html
@@ -1,12 +1,10 @@
-
+<!--
     <h4 class="">Today's Income Report</h4>
 
     <table class="table">
 
     <thead class="thead" style="background-color: #5988E2;">
       <tr class="w-75">
-        <!-- <th scope="col">Date</th>
-        <th scope="col">Cashier in Charge</th> -->
         <th>Enrty No.</th>
         <th scope="col">Payments</th>
         <th scope="col">Expenses</th>
@@ -15,24 +13,18 @@
     </thead>
     <tbody>
       <tr class="w-75">
-        <!-- <td>26/08/2024</td>
-        <td>joel</td> -->
         <th>1</th>
         <td class="pe-5">4000</td>
         <td class="pe-5">300</td>
         <td></td>
       </tr>
       <tr>
-        <!-- <td>27/08/2024</td>
-        <td>Lance</td> -->
         <th>2</th>
         <td class="pe-5">7000</td>
         <td class="pe-5">500</td>
         <td></td>
       </tr>
       <tr>
-        <!-- <td>carding</td>
-        <td>27/08/2024 11:14</td> -->
         <th>3</th>
         <td class="pe-5">10000</td>
         <td class="pe-5">1500</td>
@@ -47,4 +39,82 @@
       </tr>
     </tbody>
   </table>
+ -->
 
+
+ <h4>Today's Income Report</h4>
+
+<h5><u>Payments</u></h5>
+<table class="table" style=" width: 80%;">
+  <thead>
+    <tr>
+      <th style="padding: 8px; text-align: left;">Entry No.</th>
+      <th style="padding: 8px; text-align: left;">Transaction</th>
+      <th style="padding: 4px; text-align: left;">Payments</th>
+      <th style="padding: 8px; text-align: right;">Total Income</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th style="padding: 8px;">1</th>
+      <td style="padding: 8px;">Rico</td>
+      <td style="padding: 8px; text-align: left;">100</td>
+      <td style="padding: 8px;"></td>
+    </tr>
+    <tr>
+      <th style="padding: 8px;">2</th>
+      <td style="padding: 8px;">Kobe</td>
+      <td style="padding: 8px; text-align: left;">100</td>
+      <td style="padding: 8px;"></td>
+    </tr>
+    <tr>
+      <th style="padding: 8px;">3</th>
+      <td style="padding: 8px;">Siro</td>
+      <td style="padding: 8px; text-align: left;">1500</td>
+      <td style="padding: 8px;"></td>
+    </tr>
+    <tr>
+      <th colspan="2" style="padding: 8px;">Total:</th>
+      <th style="padding: 8px; text-align: left;">500</th>
+      <td style="padding: 8px;"></td>
+    </tr>
+  </tbody>
+</table>
+
+<h5><u>Expenses</u></h5>
+<table class="table" style=" width: 80%;">
+  <thead>
+    <tr>
+      <th style="padding: 8px; text-align: left;">Entry No.</th>
+      <th style="padding: 8px; text-align: left;">Bought Item</th>
+      <th style="padding: 8px;"></th>
+      <th style="padding: 8px; text-align: center;">Amount Expenses</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th style="padding: 8px;">1</th>
+      <td style="padding: 8px;">Rico</td>
+      <td style="padding: 8px;"></td>
+      <td style="padding: 8px; text-align: center;">50</td>
+    </tr>
+    <tr>
+      <th style="padding: 8px;">2</th>
+      <td style="padding: 8px;">Kobe</td>
+      <td style="padding: 8px;"></td>
+      <td style="padding: 8px; text-align: center;">25</td>
+    </tr>
+    <tr>
+      <th style="padding: 8px;">3</th>
+      <td style="padding: 8px;">Siro</td>
+      <td style="padding: 8px;"></td>
+      <td style="padding: 8px; text-align: center;">50</td>
+    </tr>
+    <tr>
+      <th colspan="2" style="padding: 8px;">Total:</th>
+      <th style="padding: 8px; text-align: right;">500</th>
+      <th style="padding: 8px; text-align: center;">125</th>
+      <th style="padding: 8px; text-align: right;">375</th>
+    </tr>
+  </tbody>
+</table>
