--- a/src/app/Modules/Customers/cust-history/cust-history.component.html
+++ b/src/app/Modules/Customers/cust-history/cust-history.component.html
@@ -4,7 +4,7 @@
       <div class="row w-100 text-center" style="padding: none;">
           <div class="col-sm-3 image" style="justify-content: space-evenly; align-items: center;">
               <div class="card text-center">
-                  <img src="image/stud6.jpg">
+                  <img src="images/custprofile.jpg">
               </div>
           </div>
           <div class="col-sm-9 details py-4 text-start" style="box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); background-color: white;">
@@ -31,7 +31,8 @@
       <div class="row mt-3">
           <div class="card">
               <div class="card-body">
-                <h5 class="card-title">Transaction History</h5>
+                <h3 class="card-title text-start">Transaction History</h3>
+                <span class="mb-3" style="display: inline-flex; float: right;"><label for="today" class="fs-6 me-2">Pick a Date: </label><input class="form-control form-control-date" id="today" type="date" class="date-today" [(ngModel)]="today"></span>
                 <table class="table">
                   <thead class="thead-dark">
                     <tr>
