--- a/src/app/Modules/Expences/exp-list/exp-list.component.html
+++ b/src/app/Modules/Expences/exp-list/exp-list.component.html
@@ -1,5 +1,5 @@
-<div class="row justify-content-center mt-5">
-  <div class="col-md-6">
+<div class="row justify-content-center w-100 mt-5 ">
+  <div class="col-sm-8">
     <div class="card">
       <div class="card-body">
         <h4 class="card-title">List Of Expenses</h4>
@@ -9,7 +9,7 @@
             <tr>
               <th scope="col" style="color: #0b0d0f;">Date taken</th>
               <th scope="col" style="color: #0b0d0f;">Time taken</th>
-              <th scope="col" style="color: #0b0d0f;">Given to</th>
+              <th scope="col" style="color: #0b0d0f;">Staff-in-Charge</th>
               <th scope="col" style="color: #0b0d0f;">Reason</th>
               <th scope="col" style="color: #0b0d0f;">Receipt</th>
               <th scope="col" style="color: #0b0d0f;">Amount</th>
@@ -19,30 +19,115 @@
             <tr>
               <td>14/10/2024</td>
               <td>09:24:06</td>
-              <td>carding</td>
+              <td>Carlo</td>
               <td>Zonrox</td>
-              <td></td>
-              <td>200</td>
+              <td class="m-0">
+                <div class="container imagess" style="max-width: 2%; margin: 0; position: relative;" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                  <img src="./images/receipt.jpg"
+                      class="imgs border border-2 border-white m-0"
+                      width="30" height="35"
+                      type="button"
+                      data-bs-toggle="modal"
+                      data-bs-target="#exampleModal"
+                      id="imgBtn"
+                  />
+                  <span class="view position-absolute px-1 m-0 translate-middle badge" style="left: 40px; bottom: -12px;">
+                      <i class="fa-regular fa-eye"></i>
+                  </span>
+                </div>
+              </td>
+              <td class="text-end pe-4">200</td>
 
             </tr>
             <tr>
               <td>14/13/2024</td>
               <td>15:56:10</td>
-              <td>Lucio</td>
+              <td>Milo</td>
               <td>Downy</td>
-              <td></td>
-              <td>100</td>
+              <td>
+                <div class="container imagess" style="max-width: 2%; margin: 0; position: relative;" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                  <img src="./images/receipt.jpg"
+                      class="imgs border border-2 border-white m-0"
+                      width="30" height="35"
+                      type="button"
+                      data-bs-toggle="modal"
+                      data-bs-target="#exampleModal"
+                      id="imgBtn"
+                  />
+                  <span class="view position-absolute px-1 m-0 translate-middle badge" style="left: 40px; bottom: -12px;">
+                      <i class="fa-regular fa-eye"></i>
+                  </span>
+                </div>
+              </td>
+              <td class="text-end pe-4">100</td>
             </tr>
             <tr>
               <td>14/19/2024</td>
               <td>10:27:40</td>
-              <td>Lance</td>
+              <td>Jim</td>
               <td>Soap</td>
-              <td></td>
-              <td>100</td>
+              <td>
+                <div class="container imagess" style="max-width: 2%; margin: 0; position: relative;" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                  <img src="./images/receipt.jpg"
+                      class="imgs border border-2 border-white m-0"
+                      width="30" height="35"
+                      type="button"
+                      id="imgBtn"
+                  />
+                  <span class="view position-absolute px-1 m-0 translate-middle badge" style="left: 40px; bottom: -12px;">
+                      <i class="fa-regular fa-eye"></i>
+                  </span>
+                </div>
+              </td>
+              <td class="text-end pe-4">100</td>
             </tr>
           </tbody>
         </table>
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h1 class="modal-title fs-5" id="exampleModalLabel">View Expense Receipt</h1>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                <div class="row">
+                  <div class="col-sm-6">
+                    <label for="name" class="text-secondary">Staff-in-Charge: </label>
+                    <p class="fs-5">Powela Minity</p>
+                  </div>
+
+                  <div class="col-sm-6">
+                    <label for="name" class="text-secondary">Date & Time Taken:</label>
+                    <p class="fs-5">12/02/2024 -  09:29:24</p>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-sm-6">
+                    <label for="name" class="text-secondary">Description: </label>
+                    <p class="fs-5">Zonrox 200ml</p>
+                  </div>
+
+                  <div class="col-sm-6">
+                    <label for="name" class="text-secondary">Amount:</label>
+                    <p class="fs-5">200</p>
+                  </div>
+                </div>
+              </div>
+              <hr class="mx-5 mt-0">
+              <div class="row mx-2">
+
+                  <label class="fs-5">Receipt:</label>
+                <div class="col">
+                  <img src="./images/receipt.jpg" class="imgs border border-2 border-white m-0 w-75" style="display: flex; justify-content: space-around;"  id="imgBtn">
+                </div>
+              </div>
+              <div class="modal-footer mt-2">
+                <button type="button" class="btn btn-primary">Done</button>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
@@ -52,10 +137,6 @@
         <h5 class="card-title" style="font-weight: bold; color: #0b0d0f; font-size: 18px;">Add Expenses</h5>
         <form>
           <div class="form-row">
-            <div class="form-group col-md-8">
-              <label for="cash-expense" class="form-label">Given to:</label>
-              <input type="text" class="form-control" id="cash-expense" placeholder="Enter name">
-            </div>
             <div class="form-group col-md-8">
               <label for="change" class="form-label">Amount:</label>
               <input type="number" class="form-control" id="change" placeholder="Enter amount" value="0">
@@ -76,6 +157,9 @@
     </div>
 </div>
 </div>
+
+
+
 
 
 <script>
