--- a/src/app/Modules/Home/home-page/home-page.component.css
+++ b/src/app/Modules/Home/home-page/home-page.component.css
@@ -148,7 +148,7 @@ nav a.active::before {
 
 
 
-h2 {
+/* h2 {
   color: #000;
   text-align: center;
   font-size: 2em;
@@ -215,4 +215,169 @@ h2 {
   background: #fff;
   color: #000;
   border-top: 3px solid #32557f;
+} */
+
+
+
+
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
+
+body {
+  font-family: "Lato", sans-serif;
+  font-size: 14px;
+  padding: 70px;
+  background: #f69ec4;
+}
+
+.tabs {
+  margin-bottom: 30px;
+}
+
+nav,
+.content {
+  min-width: 1250px;
+}
+
+.content {
+  max-width: 1250px;
+  display: block;
+  margin-bottom: 1em;
+  background: white;
+  padding: 2em 3em;
+  border-radius: 0.15em;
+  border: 0.2em solid #fff;
+  color: #fff;
+  box-shadow: 0 1rem 1.5rem #0000003e;
+}
+
+nav {
+  position: relative;
+  z-index: 1;
+}
+nav > a {
+  position: relative;
+  width: 10em;
+  display: inline-block;
+  padding: 0.7em 2em 0.5em;
+  color: #fff;
+  text-decoration: none;
+  margin: 0 -0.3em;
+}
+nav > a::before {
+  border: 0.2em solid #fff;
+}
+nav a::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+  border-bottom: none;
+  border-radius: 0.4em 0.4em 0 0;
+  background: #7eb4e2;
+  transform: scale(1.2, 1.3) perspective(0.5em) rotateX(5deg);
+
+}
+
+nav a.active {
+  /* z-index: 2; */
+  color: black;
+}
+nav a.active::before {
+  background-color: white;
+
+  margin-bottom: -0.08em;
+}
+
+.tab-right nav {
+  padding-left: 2.3em;
+}
+.tab-right nav a::before {
+  transform-origin: bottom right;
+}
+
+.tab-left nav {
+  padding-left: 0.3em;
+}
+.tab-left nav a::before {
+  transform-origin: bottom left;
+}
+
+.tab-left-right nav {
+  padding-left: 1.3em;
+}
+.tab-left-right nav a::before {
+  transform-origin: bottom;
+}
+
+.tab-round nav {
+  padding-left: 0.3em;
+}
+.tab-round nav a {
+  padding-top: 13px;
+  text-align: center;
+  background: #32557fbe;
+  color: #fff;
+  border-radius: 10px;
+  height: 100px;
+  margin-right: 1px;
+  border-left: white solid 3px;
+  border-top: white solid 3px;
+}
+.tab-round nav a::before {
+  background-color: none;
+  margin-bottom: 0;
+}
+.tab-round nav a.active {
+  background: #fff;
+  border-left: #32557f solid 3px;
+  border-top: #32557f solid 3px;
+  color: #000;
+}
+
+/* .tab-round nav a.active .content{
+  border: 0.2em solid #216ad0;
+} */
+.tab-round .content {
+  position: absolute;
+  width: 450px;
+  height: auto;
+  margin-top: -50px;
+  margin-bottom: 50px;
+  background: #fff;
+  color: #000;
+  border-radius: 10px;
+  z-index: 100;
+  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.4);
+  padding: 30px;
+  /* border: 0.2em solid #32557f; */
+}
+.tab-round a::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+  border-bottom: none;
+  border-radius: none;
+  background: none;
+  transform: none;
+}
+.tab-round nav > a::before {
+  border: none;
+}
+.tab-round nav a.active::before {
+  background-color: #fff;
+  margin-bottom: 0;
+  border-radius: 10px;
+}
+
