--- a/src/app/Modules/Home/receiving/receiving.component.html
+++ b/src/app/Modules/Home/receiving/receiving.component.html
@@ -59,7 +59,7 @@
               </ng-container>
 
               <ng-container matColumnDef="payment">
-                <th mat-header-cell *matHeaderCellDef > Payment </th>
+                <th mat-header-cell *matHeaderCellDef > Type of Payment </th>
                 <td mat-cell *matCellDef="let element"  style="color: black;" >
                   @if (element.payment == 'Unpaid'){
                     <button class="btn btn-payment" style="background-color: rgba(239, 139, 139, 0.8);" data-bs-toggle="modal" data-bs-target="#roomInfoModal1">Unpaid</button>
