--- a/src/app/Modules/Home/release/release.component.html
+++ b/src/app/Modules/Home/release/release.component.html
@@ -48,7 +48,7 @@
               </ng-container>
 
               <ng-container matColumnDef="payment">
-                <th mat-header-cell *matHeaderCellDef  style="color: black;"> Status </th>
+                <th mat-header-cell *matHeaderCellDef  style="color: black;">Type of Payment </th>
                 <td mat-cell *matCellDef="let element" style="color: black;" id="StatusCol">
                   @if (element.payment == 'Unpaid'){
                     <button class="btn btn-payment" style="background-color: rgba(239, 139, 139, 0.8);" data-bs-toggle="modal" data-bs-target="#roomInfoModal">Unpaid</button>
@@ -65,7 +65,7 @@
               </ng-container>
 
               <ng-container matColumnDef="complete">
-                <th mat-header-cell *matHeaderCellDef  style="color: black;"> Tool </th>
+                <th mat-header-cell *matHeaderCellDef  style="color: black;"> Laundry Status </th>
                 <td mat-cell *matCellDef="let element"  style="color: black;"> <button class="btn" style="background-color: rgb(39, 195, 46); color: white;">{{element.complete}}</button> </td>
               </ng-container>
 
