--- a/src/app/Modules/Reports/rep-remitance/rep-remitance.component.html
+++ b/src/app/Modules/Reports/rep-remitance/rep-remitance.component.html
@@ -45,7 +45,17 @@
 
     <div class="col-sm-6">
       <label for="name" class="text-secondary">Given To:</label>
+      <div class="dropdown">
+        <a class="btn btn-secondary dropdown-toggle" style="justify-content: space-between;" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          Select here
+        </a>
 
+        <ul class="dropdown-menu">
+          <li><a class="dropdown-item">Admin</a></li>
+          <li><a class="dropdown-item">Staff 2</a></li>
+          <li><a class="dropdown-item">Staff 3</a></li>
+        </ul>
+      </div>
     </div>
   </div>
 
