--- a/src/app/mainpage/mainpage.component.html
+++ b/src/app/mainpage/mainpage.component.html
@@ -1,7 +1,7 @@
 <div class="navbar container-fluid sidenav" [ngClass]="{ open: isOpen }">
   <div class="logo-details">
     <img src="images/staffProf.jpg" class="dp">
-    <p class="name">Marites Ka</p>
+    <p class="name">Staff 1</p>
   </div>
   <div class="menu">
     <a
