--- a/src/app/Modules/Expences/exp-list/exp-list.component.html
+++ b/src/app/Modules/Expences/exp-list/exp-list.component.html
@@ -1,12 +1,17 @@
-<div class="row justify-content-center w-100 mt-5 ">
+<div class="row justify-content-center w-100 mt-5 " >
   <div class="col-sm-8">
-    <div class="card">
+    <div class="card" style="height: 600px; overflow-y: auto;">
+      <label for="today" class="fs-6 me-2">Pick a Date: </label>
       <div class="card-body">
         <h4 class="card-title">List Of Expenses</h4>
-        <span style="display: inline-flex; float: right;"><label for="today" class="fs-6 me-2">Pick a Date: </label><input class="form-control form-control-date" id="today" type="date" class="date-today" [(ngModel)]="today"></span>
+        
+        <span class="datePicker" style="display: inline-flex; float: right;">
+          <label for="today" class="fs-6 me-2">Pick a Date: </label>
+          <input class="form-control form-control-date" id="today" type="date" class="date-today" [(ngModel)]="today" (change)="onDateChange($event)">
+        </span>
         <table class="table mt-5">
-          <thead class="thead" style="background-color: #5988E2;">
-            <tr>
+          <thead class="thead" style="background-color: #5988E2; ">
+            <tr style="position: sticky;">
               <th scope="col" style="color: #0b0d0f;">Date taken</th>
               <th scope="col" style="color: #0b0d0f;">Time taken</th>
               <th scope="col" style="color: #0b0d0f;">Staff-in-Charge</th>
@@ -16,140 +21,107 @@
             </tr>
           </thead>
           <tbody>
-            <tr>
-              <td>14/10/2024</td>
-              <td>09:24:06</td>
-              <td>Carlo</td>
-              <td>Zonrox</td>
-              <td class="m-0">
-                <div class="container imagess" style="max-width: 2%; margin: 0; position: relative;" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                  <img src="./images/receipt.jpg"
-                      class="imgs border border-2 border-white m-0"
-                      width="30" height="35"
-                      type="button"
-                      data-bs-toggle="modal"
-                      data-bs-target="#exampleModal"
-                      id="imgBtn"
-                  />
-                  <span class="view position-absolute px-1 m-0 translate-middle badge" style="left: 40px; bottom: -12px;">
-                      <i class="fa-regular fa-eye"></i>
-                  </span>
-                </div>
-              </td>
-              <td class="text-end pe-4">200</td>
-
-            </tr>
-            <tr>
-              <td>14/13/2024</td>
-              <td>15:56:10</td>
-              <td>Milo</td>
-              <td>Downy</td>
-              <td>
-                <div class="container imagess" style="max-width: 2%; margin: 0; position: relative;" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                  <img src="./images/receipt.jpg"
-                      class="imgs border border-2 border-white m-0"
-                      width="30" height="35"
-                      type="button"
-                      data-bs-toggle="modal"
-                      data-bs-target="#exampleModal"
-                      id="imgBtn"
-                  />
-                  <span class="view position-absolute px-1 m-0 translate-middle badge" style="left: 40px; bottom: -12px;">
-                      <i class="fa-regular fa-eye"></i>
-                  </span>
-                </div>
-              </td>
-              <td class="text-end pe-4">100</td>
-            </tr>
-            <tr>
-              <td>14/19/2024</td>
-              <td>10:27:40</td>
-              <td>Jim</td>
-              <td>Soap</td>
-              <td>
-                <div class="container imagess" style="max-width: 2%; margin: 0; position: relative;" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                  <img src="./images/receipt.jpg"
-                      class="imgs border border-2 border-white m-0"
-                      width="30" height="35"
-                      type="button"
-                      id="imgBtn"
-                  />
-                  <span class="view position-absolute px-1 m-0 translate-middle badge" style="left: 40px; bottom: -12px;">
-                      <i class="fa-regular fa-eye"></i>
-                  </span>
-                </div>
-              </td>
-              <td class="text-end pe-4">100</td>
-            </tr>
+            @for (e of filteredExpense; track e.Expense_ID){
+              <tr>
+                <td>{{e.Datetime_taken | date:'MMM dd, YYYY'}}</td>
+                <td>{{e.Datetime_taken | date:'hh:mm:ss a'}}</td>
+                <td>{{e.AdminName}}</td>
+                <td>{{e.Desc_reason}}</td>
+                <td>
+                  <div *ngIf="e.Expense_ID" class="container imagess" style="max-width: 2%; margin: 0; position: relative;" (click)="dispExpReceipt(e.Expense_ID)" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                    <img [src]="'http://localhost:8000/storage/' + e.Receipt_filenameimg"
+                        class="imgs border border-2 border-white m-0"
+                        width="30" height="35"
+                        type="button"
+                        id="imgBtn"
+                    />
+                    <span class="view position-absolute px-1 m-0 translate-middle badge" style="left: 40px; bottom: -12px;">
+                        <i class="fa-regular fa-eye"></i>
+                    </span>
+                  </div>
+                </td>
+                <td class="text-end pe-4">{{e.Amount}}</td>
+                 <button class="btn btn-primary d-block mx-auto mt-3"  style="background-color: #5988E2; font-size: 14px;">
+                  <i class="fas fa-edit" (click)="populateUpdateForm(e)"></i> Update
+                </button>
+              </tr>
+            }
           </tbody>
         </table>
-        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-          <div class="modal-dialog">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h1 class="modal-title fs-5" id="exampleModalLabel">View Expense Receipt</h1>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-              </div>
-              <div class="modal-body">
-                <div class="row">
-                  <div class="col-sm-6">
-                    <label for="name" class="text-secondary">Staff-in-Charge: </label>
-                    <p class="fs-5">Powela Minity</p>
-                  </div>
+      </div>
+    </div>
+  </div>
 
-                  <div class="col-sm-6">
-                    <label for="name" class="text-secondary">Date & Time Taken:</label>
-                    <p class="fs-5">12/02/2024 -  09:29:24</p>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="col-sm-6">
-                    <label for="name" class="text-secondary">Description: </label>
-                    <p class="fs-5">Zonrox 200ml</p>
-                  </div>
 
-                  <div class="col-sm-6">
-                    <label for="name" class="text-secondary">Amount:</label>
-                    <p class="fs-5">200</p>
-                  </div>
-                </div>
-              </div>
-              <hr class="mx-5 mt-0">
-              <div class="row mx-2">
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="exampleModalLabel"></h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          <div class="row">
+            <div class="col-sm-6">
+              <label for="name" class="text-secondary">Staff-in-Charge: </label>
+              <p class="fs-5">{{expDet?.AdminName}}</p>
+            </div>
 
-                  <label class="fs-5">Receipt:</label>
-                <div class="col">
-                  <img src="./images/receipt.jpg" class="imgs border border-2 border-white m-0 w-75" style="display: flex; justify-content: space-around;"  id="imgBtn">
-                </div>
-              </div>
-              <div class="modal-footer mt-2">
-                <button type="button" class="btn btn-primary">Done</button>
-              </div>
+            <div class="col-sm-6">
+              <label for="name" class="text-secondary">Date & Time Taken:</label>
+              <p class="fs-5">{{expDet?.Datetime_taken | date:'MMM dd, YYYY'}} - {{expDet?.Datetime_taken | date:'hh:mm:ss a'}}</p>
             </div>
           </div>
+          <div class="row">
+            <div class="col-sm-6">
+              <label for="name" class="text-secondary">Description: </label>
+              <p class="fs-5">{{expDet?.Desc_reason}}</p>
+            </div>
+
+            <div class="col-sm-6">
+              <label for="name" class="text-secondary">Amount:</label>
+              <p class="fs-5">{{expDet?.Amount}}.00</p>
+            </div>
+          </div>
+        </div>
+        <hr class="mx-5 mt-0">
+        <div class="row mx-2">
+
+            <label class="fs-5">Receipt:</label>
+          <div class="col">
+            <img [src]="'http://localhost:8000/storage/' + expDet?.Receipt_filenameimg" class="imgs border border-2 border-white m-0 w-75" style="display: flex; justify-content: space-around;"  id="imgBtn">
+          </div>
+        </div>
+        <div class="modal-footer mt-2">
+          <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Done</button>
         </div>
       </div>
     </div>
   </div>
+
   <div class="col-md-3">
     <div class="card" style="background-color: #ecf0f1;">
       <div class="card-body">
         <h5 class="card-title" style="font-weight: bold; color: #0b0d0f; font-size: 18px;">Add Expenses</h5>
-        <form>
+        <form [formGroup]="addExpense" (submit)="addExp()">
           <div class="form-row">
             <div class="form-group col-md-8">
               <label for="change" class="form-label">Amount:</label>
-              <input type="number" class="form-control" id="change" placeholder="Enter amount" value="0">
+              <input type="number" class="form-control" formControlName="Amount" id="change" placeholder="Enter amount" value="0">
             </div>
           </div>
           <div class="form-group">
             <label for="reason" class="form-label">Reason:</label>
-            <textarea class="form-control" id="reason" placeholder="Enter reason"></textarea>
+            <textarea class="form-control" formControlName="Desc_reason" id="reason" placeholder="Enter reason"></textarea>
           </div>
           <div class="form-group">
             <label for="file-upload" class="form-label">Receipt:</label>
             <i class="fas fa-paperclip"></i>
-            <input type="file" class="form-control" id="file-upload">
+            <input type="file" class="form-control" formControlName="Receipt_filenameimg" id="file-upload"  accept="image/*" (change)="onFileSelected($event)">
+
+            <div class="image-preview">
+              <img *ngIf="imagePreview" [src]="imagePreview" alt="" class="preview-image" style="width: auto; height: 180px;">
+            </div>
           </div>
           <button type="submit" class="btn btn-primary d-block mx-auto mt-3" style="background-color: #5988E2; font-size: 14px;">Add</button>
         </form>
