--- a/src/app/Modules/Reports/rep-expense/rep-expense.component.html
+++ b/src/app/Modules/Reports/rep-expense/rep-expense.component.html
@@ -3,34 +3,25 @@
     <table class="table text-center">
         <thead class="thead" style="background-color: #5988E2;">
           <tr>
-            <th scope="col">Purchaser</th>
+            <th scope="col">No.</th>
             <th scope="col">Order Receipt</th>
             <th scope="col">Description</th>
             <th scope="col">Total Purchased</th>
           </tr>
         </thead>
         <tbody>
-          <tr>
-            <td>Tim</td>
-            <td>E273183192</td>
-            <td>Downy</td>
-            <td>50</td>
-          </tr>
-          <tr>
-            <td>Roberto</td>
-            <td>B342322343</td>
-            <td>Bar soap</td>
-            <td>30</td>
-          </tr>
-          <tr>
-            <td>Tim</td>
-            <td>X2342424234</td>
-            <td>Powder Soap</td>
-            <td>250</td>
-          </tr>
+          @for(e of expense; track e.Admin_ID){
+            <tr>
+              <td>{{$index+1}}</td>
+              <td>{{e.receipt_images}}</td>
+              <td>{{e.Desc_reason}}</td>
+              <td>{{e.total}}</td>
+            </tr>
+          }
+          
           <tr>
             <th scope="row" colspan="3">Total:</th>
-            <th>330</th>
+            <th>{{totalexpense}}</th>
             <td></td>
           </tr>
         </tbody>
