--- a/src/app/Modules/Reports/rep-income/rep-income.component.html
+++ b/src/app/Modules/Reports/rep-income/rep-income.component.html
@@ -60,7 +60,7 @@
       <tr>
         <th style="padding: 8px;">{{$index+1}}</th>
         <td style="padding: 8px;">{{p.Tracking_number}}</td>
-        <td style="padding: 8px; text-align: left;">{{p.total}}</td>
+        <td style="padding: 8px; text-align: left;">{{p.paymentsAmount}}</td>
         <td style="padding: 8px; text-align: left;"></td>
         <td style="padding: 8px;"></td>
       </tr>
@@ -91,7 +91,7 @@
         <th style="padding: 8px;">{{$index+1}}</th>
         <td style="padding: 8px;">{{e.Desc_reason}}</td>
         <td style="padding: 8px;"></td>
-        <td style="padding: 8px; text-align: center;">{{e.total}}</td>
+        <td style="padding: 8px; text-align: center;">{{e.Amount}}</td>
         <td style="padding: 8px;"></td>
       </tr>
     }
