--- a/src/app/Modules/Reports/rep-expense/rep-expense.component.html
+++ b/src/app/Modules/Reports/rep-expense/rep-expense.component.html
@@ -15,7 +15,7 @@
               <td>{{$index+1}}</td>
               <td>{{e.receipt_images}}</td>
               <td>{{e.Desc_reason}}</td>
-              <td>{{e.total}}</td>
+              <td>{{e.Amount}}</td>
             </tr>
           }
           
