--- a/src/app/Modules/Reports/rep-remitance/rep-remitance.component.html
+++ b/src/app/Modules/Reports/rep-remitance/rep-remitance.component.html
@@ -28,22 +28,23 @@
   <div class="row">
     <div class="col-sm-6">
       <label for="name" class="text-secondary">Total Payments:</label>
-      <p class="w-50 text-end fs-5 text-success">3, 240.00</p>
+      <p class="w-50 text-end fs-5 text-success">{{totalpayment}}</p>
     </div>
 
     <div  class="col-sm-6">
       <label for="name" class="text-secondary">Total Expenses:</label>
-      <p class="w-50 text-end fs-5" style="color: rgba(251, 76, 66, 0.849);">420.00</p>
+      <p class="w-50 text-end fs-5" style="color: rgba(251, 76, 66, 0.849);">{{totalexpense}}</p>
     </div>
   </div>
 
   <div class="row">
     <div class="col-sm-6">
       <label for="name" class="text-secondary">Enter Cash Count:</label>
-      <input type="text" class="form-control form-control-sm" (click)="openForm()">
+      <!-- <input type="text" class="form-control form-control-sm" (click)="openForm()"> -->
+      <input type="text" class="form-control form-control-sm" >
     </div>
 
-    <div class="col-sm-6">
+    <!-- <div class="col-sm-6">
       <label for="name" class="text-secondary">Given To:</label>
       <div class="dropdown">
         <a class="btn btn-secondary dropdown-toggle" style="justify-content: space-between;" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -56,7 +57,7 @@
           <li><a class="dropdown-item">Staff 3</a></li>
         </ul>
       </div>
-    </div>
+    </div> -->
   </div>
 
   <button class="btn btn-success text-end" style="float: right;">Submit</button>
